objects/npsp__GetStartedChecklistSection__mdt.object
<CustomObject>
    <description>NPSP Get Started Page sections</description>
    <fields>
        <fullName>npsp__Description_Label__c</fullName>
        <description>The API name for the Description label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Description label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Description Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Position__c</fullName>
        <description>The position of this section on the Get Started page.</description>
        <inlineHelpText>The position of this section on the Get Started page.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Title_Label__c</fullName>
        <description>The API Name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API Name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Title Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NPSP Get Started Checklist Section</label>
    <pluralLabel>NPSP Get Started Checklist Section</pluralLabel>
</CustomObject>